--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demoproject
 server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/crud?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/crud?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Mohana@1979$#
 spring.jpa.hibernate.ddl-auto=update
