--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.application.name=demoproject
-server.port=8081
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/crud?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/mydb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Mohana@1979$#
+spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
