--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql:3306/mydb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/mydb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
