--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       MYSQL_PORT: 3306
       MYSQL_USER: root
       MYSQL_PASSWORD: root_password
-      ports:
-      - "8081:8081"
+    ports:
+      - "8081:8081"  # Correct indentation
     depends_on:
       - mysql
